feat(graalvm): synthesized module loader
- feat(graalvm): js realm patching
- feat(graalvm): central loader registry
- feat(graalvm): implement `ejs` language facade
- chore(graalvm-ts): transition to engine-based utils

Signed-off-by: Sam Gammon <sam@elide.dev>